<resources>
    <!--English Language-->
    <string name="app_name">CST2335</string>
    <string name="lab_2_gui">Lab 2 GUI</string>
    <string name="click_here">Click here</string>
    <string name="check_this_out">Check this out</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="here_is_more_information">Here is more information</string>
    <string name="the_switch_now_off">The switch is now off</string>
    <string name="the_switch_now_on">The switch is now on</string>
    <string name="undo">UNDO</string>
</resources>