<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab_2_gui"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_click"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/click_here" />
        <CheckBox android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/check_this_out" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:background="@android:color/transparent"
            android:src="@drawable/flag" />
        <Switch android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_switch"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/switch_on_off" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_here"
            android:inputType="textPersonName"
            android:background="@android:color/transparent" />
    </LinearLayout>

</LinearLayout>