<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_gui"
        android:text="@string/lab_2_gui"
        android:layout_marginVertical="20sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="34sp" />
    <ImageButton android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_gui"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:src="@drawable/flag" />
    <Button android:id="@+id/btn_click"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_switch"
        app:layout_constraintHorizontal_weight="5"
        android:gravity="fill"
        android:text="@string/click_here" />
    <Switch android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_switch"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintLeft_toRightOf="@+id/btn_click"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="5"
        android:layout_marginHorizontal="20dp"
        android:gravity="fill"
        android:text="@string/switch_on_off" />
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_here"
        android:inputType="textPersonName"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_click"
        android:background="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>